@@ -1,3 +1,7 @@
+2015-05-27  Robby Stephenson  <robby@homebase.mars>
+
+	* Removed the Citebase fetcher.
+
 2015-03-15  Robby Stephenson  <robby@homebase.mars>
 
 	* Removed the PilotDB exporter.
